Fixed width of single-performance on mobile, added default photo to single performance

--- a/wp-content/themes/vsc-website/css/base/utility-classes.css
+++ b/wp-content/themes/vsc-website/css/base/utility-classes.css
@@ -14,6 +14,13 @@
     position: relative;
 }
 
+@media screen and (max-width: 600px) {
+    .content-narrow {
+        max-width: 100%;
+    }   
+    
+}
+
 .full-page-height {
     height: 100vh;
 }
